<resources>
    <string name="app_name">FavorTech Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="wallpaper">wallpaper</string>
    <string name="full_image">Full Image</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="logo">logo</string>
    <string name="registration_note">* Enter email and password to login or register\n* Password must be at least 6
        characters long
    </string>
    <string name="welcome">Welcome</string>
    <string name="wrong_credentials">Wrong Credentials</string>
</resources>
