<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewmodel"
                type="com.muhaammaad.challenge.ui.login.viewmodel.LoginViewModel"/>
    </data>
    <!-- TODO: Add Scroll View for better ux and smaller devices-->
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

        <LinearLayout
                android:id="@+id/ly_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@drawable/ic_login_bottom_bg"
                android:orientation="vertical"
                android:padding="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/registration"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person"/>

                <com.google.android.material.textfield.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:onTextChanged="@{viewmodel::onEmailChanged}"
                            android:text="@={viewmodel.email}"
                            android:textColor="#383838"
                            android:textSize="20sp"
                            app:backgroundTint="@color/colorPrimaryDark"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_lock"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:layout_marginStart="17dp"
                        android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:onTextChanged="@{viewmodel::onPasswordChanged}"
                            android:text="@={viewmodel.password}"
                            android:textColor="#383838"
                            android:textSize="20sp"
                            app:backgroundTint="@color/colorPrimaryDark"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_marginTop="24dp"
                          android:weightSum="2"
                          android:gravity="center">

                <Button
                        android:id="@+id/btn_signup"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:enabled="@{viewmodel.btnSelected}"
                        android:onClick="@{()->viewmodel.signup()}"
                        android:text="@string/sign_up"/>
                <Button
                        android:id="@+id/btn_login"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_margin="5dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="@{viewmodel.btnSelected}"
                        android:onClick="@{()->viewmodel.login()}"
                        android:text="@string/login"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/ic_launcher_foreground"
                   app:layout_constraintBottom_toTopOf="@+id/ly_center"
                   android:contentDescription="@string/logo"
                   android:layout_marginBottom="20dp"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:onClick="@{()->viewmodel.signup()}"
                android:textSize="12sp"
                android:text="@string/registration_note"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="@id/ly_center"
                app:layout_constraintStart_toStartOf="@id/ly_center"
                app:layout_constraintTop_toBottomOf="@id/ly_center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
